src/components/Home/landingpage.css
/*h2 {
	text-align: left;
}
p {
    text-align: left !important;
}*/

h3 {
	font-size: 100px;
}

#headerRow {
	margin-left: 23px !important;
	margin-right: 23px !important;
}
/*.row {
	margin-left: 23px !important;
	margin-right: 23px !important;
}*/

#leftalign {
	text-align: left !important;
	font-size: 17px !important;
}

@media (max-width: 1060px){ 
	#howItWorks {
		padding-top: 50px;
	}
	#help{
		width: 98%;
		margin: 0 auto;
		padding-bottom: 40px;
	}
	#pHelp{
		padding-left: 6em;
		padding-right: 6em;
	}
	#hHelp{
		padding-bottom: 10px;
		padding-top: 10px;
		font-size: 19px;
	}
	#imgWorks {
		padding-top: 42px;
	}
	#exchange {
		padding-top: 20px;
	}
	#pRegister {
		margin-right: 4%;
		margin-left: 4%;
	}
	#colGrid {
		margin-top: 45px;
	}
	#headerTop {
		padding-bottom: 158px;
	}

}

@media (min-width: 1060px){ 
	#sixtysix {
		width: 66% !important;
	}
	#help{
		margin-left: 140px;
		margin-right: 140px;
		margin-top: 50px;
		margin-bottom: 50px;
		padding-top: 30px;
		padding-bottom: 30px;
		padding-left: 3%;
    	padding-right: 3%;
	}
	#hHelp{
		padding-bottom: 10px;
		padding-top: 10px;
		font-size: 19px;
	}
	#headerTop {
		padding-bottom: 35px;
	}
	#howItWorks {
		margin-top: 20px;
		margin-bottom: 50px;
	}
	#exchange {
		padding-top: 10px;
	}
	#h3exchange{
		padding-top: 10px;
	}

	#pRegister {
		margin-right: 20%;
		margin-left: 20%;
	}

	#GridlistID {
	    padding-right: 10%;
	    padding-top: 28px;
	}

	#head{
		padding-left: 10%;
	}

}

@media (max-width: 1060px){
	.col-sm-3 {
		width: auto !important;
		float: inherit !important;

	}
	.col-sm-6 {
		width: auto !important;
		float: inherit !important;
		margin:0 auto !important;
	
	}
	#head{
		padding-left: 10px;
	}
}

#exchange {
	font-size: 55px;
	text-align: left;
}

#h3exchange{
	font-size: 23px;
	color: #374147fc !important;
	text-align: left;
	max-width: 300px;
}


#imgWorks {
	width: 80px;
	height: auto;
}

#pRegister {
	font-size: 19px;
}

p{
	font-size: 17px;
}

#GridlistID {
    max-width: 700px;
    max-height: 266px;
    height: 200px;
    text-align: left;
    margin: 0 auto !important;
  }

#head{
	max-width: 700px;
	margin: 0 auto;
	padding-bottom: 30px;
}

#headerTop {
	padding-top: 70px;
}

/*#helpRow {
	margin-left: 
}*/

